# Todoapis

./: README.md  Snake_EngineerMan_Python.py  db.sqlite3  requirements.txt
Django Projects/SH50BootcampPythonTeam2/Week4URLSHORTNER/: db.sqlite3
Django Projects/SH50BootcampPythonTeam2/Week4URLSHORTNER/urlenv/Scripts/: activate  activate.bat
Django Projects/SH50BootcampPythonTeam2/Week4URLSHORTNER/urlshortner/: settings.py
Eventplusng/: pyproject.toml
Love_ProgrammingHero/: WhatsApp.py  text2speech.py
Todo/: settings.py  urls.py
apis/: admin.py  models.py  serializers.py  urls.py  views.py
apis/migrations/: 0001_initial.py
todos/: admin.py  models.py
todos/migrations/: 0001_initial.py  0002_alter_todo_options_todo_created_at_todo_deadline_and_more.py
