[tool.poetry]
name = "teaching"
version = "0.1.0"
description = "we are using this for an interactive class"
authors = ["Adesegun A. ADEBOYE <adeboye.adesegun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
